--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <img src="images/user.jpg">
           <div>
             <h3>Akrom Abdaliev</h3>
-            <a href="#">See your profile</a>
+            <a href="profile.html">See your profile</a>
           </div>
         </div>
         <hr>
@@ -94,7 +94,7 @@
           <a href="#"><img src="images/premium.png"> Try Premium</a>
         </div>
       </div>
-      <div class="sidebar-activity">
+      <div class="sidebar-activity" id="sidebarActivity">
         <h3>RECENT</h3>
         <a href="#"><img src="images/recent.png">Web Development</a>
         <a href="#"><img src="images/recent.png">User Interface</a>
@@ -115,6 +115,7 @@
           <a href="#">Discover More </a>
         </div>
       </div>
+      <p id="showmoreLink" onclick="toggleActivity()">Show More <b>+</b> </p>
     </div>
 
     <!-- ----------main-content-------------- -->
@@ -337,6 +338,23 @@
 
     function toggleMenu() {
       profileMenu.classList.toggle("open-menu");
+    }
+
+  </script>
+  <script>
+    let sideActivity = document.getElementById("sidebarActivity");
+    let moreLink = document.getElementById("showmoreLink");
+
+    function toggleActivity(){
+      sideActivity.classList.toggle("open-activity");
+
+      if(sideActivity.classList.contains("open-activity")){
+        moreLink.innerHTML = "Show Less <b>-</b>";
+      }
+      else{
+        moreLink.innerHTML = "Show More <b>+</b>";
+      }
+
     }
 
   </script>
