--- a/profile.html
+++ b/profile.html
@@ -38,7 +38,7 @@
           <img src="images/user.jpg">
           <div>
             <h3>Akrom Abdaliev</h3>
-            <a href="#">See your profile</a>
+            <a href="profile.html">See your profile</a>
           </div>
         </div>
         <hr>
@@ -96,8 +96,11 @@
       <div class="profile-description">
         <h2>About</h2>
         <p>
-          Within the dynamic landscape of the IT sector, the symbiotic blend of comprehensive search engine optimization and a well-executed digital marketing strategy lays the foundation for success. Emerging as a frontrunner on the inaugural search engine results page for prominent queries positions you prominently amidst your IT counterparts, underscoring your competitive prowess.</p>
-          <a href="#" class="see-more-link">See more ... </a>
+          Within the dynamic landscape of the IT sector, the symbiotic blend of comprehensive search engine optimization
+          and a well-executed digital marketing strategy lays the foundation for success. Emerging as a frontrunner on
+          the inaugural search engine results page for prominent queries positions you prominently amidst your IT
+          counterparts, underscoring your competitive prowess.</p>
+        <a href="#" class="see-more-link">See more ... </a>
       </div>
       <div class="profile-description">
         <h2>Experience</h2>
@@ -107,16 +110,157 @@
             <h3>Lead Front-End and Full-stack Developer</h3>
             <b>Microsoft &middot; Full-time</b>
             <b>Jan 2022 - Present &middot; 1.5 years</b>
-            <p>Computer programming is the process of performing a particular computation, usually by desining and building an executable computer program.</p>
+            <p>Computer programming is the process of performing a particular computation, usually by desining and
+              building an executable computer program.</p>
             <hr>
+          </div>
+        </div>
+        <div class="profile-desc-row">
+          <img src="images/slack.png">
+          <div>
+            <h3>Full-stack Developer</h3>
+            <b>Microsoft &middot; Full-time</b>
+            <b>July 2020 - Jan 2022 &middot; 1.8 years</b>
+            <p>Computer programming is the process of performing a particular computation, usually by desining and
+              building an executable computer program.</p>
+            <hr>
+          </div>
+        </div>
+        <div class="profile-desc-row">
+          <img src="images/google.png">
+          <div>
+            <h3>Web Developer</h3>
+            <b>Microsoft &middot; Full-time</b>
+            <b>July 2018 - June 2020 &middot; 2 years</b>
+            <p>Computer programming is the process of performing a particular computation, usually by desining and
+              building an executable computer program.</p>
+          </div>
+        </div>
+        <hr>
+        <a href="#" class="experience-link">Show all 7 experiences <img src="images/right-arrow.png"></a>
+      </div>
+      <div class="profile-description">
+        <h2>Education</h2>
+        <div class="profile-desc-row">
+          <img src="images/mit.png">
+          <div>
+            <h3>The Massachusetts Institute of Technology</h3>
+            <b>MSCS, Computer Science</b>
+            <b>2025-2027</b>
+            <hr>
+          </div>
+        </div>
+        <div class="profile-desc-row">
+          <img src="images/eul.jpeg">
+          <div>
+            <h3>European University of Lefke</h3>
+            <b>BS, Software Engineering</b>
+            <b>2022-2025</b>
+          </div>
+        </div>
+      </div>
+      <div class="profile-description">
+        <h2>Skills</h2>
+        <a href="#" class="skills-btn">Leadership</a>
+        <a href="#" class="skills-btn">Web Design</a>
+        <a href="#" class="skills-btn">Development</a>
+        <a href="#" class="skills-btn">Communication</a>
+        <a href="#" class="skills-btn">UI/UX</a>
+        <a href="#" class="skills-btn">Planning</a>
+        <a href="#" class="skills-btn">Coding</a>
+        <a href="#" class="skills-btn">JavaScript</a>
+        <a href="#" class="skills-btn">Python</a>
+        <a href="#" class="skills-btn">Django</a>
+        <a href="#" class="skills-btn">React</a>
+        <a href="#" class="skills-btn">Node.js</a>
+        <a href="#" class="skills-btn">SQL</a>
+        <a href="#" class="skills-btn">NoSQL</a>
+
+      </div>
+      <div class="profile-description">
+        <h2>Languages</h2>
+        <a href="#" class="language-btn">English</a>
+        <a href="#" class="language-btn">Russian</a>
+        <a href="#" class="language-btn">Turkish</a>
+        <a href="#" class="language-btn">German</a>
+      </div>
+
+    </div>
+    <!-- ------------profile sidebar------------ -->
+    <div class="profile-sidebar">
+      <div class="sidebar-ad">
+        <small>Ad &middot; &middot; &middot;</small>
+        <p>Master the 5 principles of web design</p>
+        <div>
+          <img src="images/user.jpg">
+          <img src="images/mi-logo.png">
+        </div>
+        <b>Brand and Demand in Xiaomi</b>
+        <a href="#" class="add-link">Learn More</a>
+      </div>
+
+      <div class="sidebar-people">
+        <h3>People you may know</h3>
+        <div class="sidebar-people-row">
+          <img src="images/user-5.png">
+          <div>
+            <h2>Chris Tung</h2>
+            <p>Head of Marketing at Alibaba</p>
+            <a href="#">Connect</a>
+          </div>
+        </div>
+      </div>
+      <div class="sidebar-people">
+        <h3>People you may know</h3>
+        <div class="sidebar-people-row">
+          <img src="images/user-2.png">
+          <div>
+            <h2>Joshua Hughes</h2>
+            <p>Web Developer at Google</p>
+            <a href="#">Connect</a>
+          </div>
+        </div>
+      </div>
+      <div class="sidebar-people">
+        <h3>People you may know</h3>
+        <div class="sidebar-people-row">
+          <img src="images/user-1.png">
+          <div>
+            <h2>Joshua Hughes</h2>
+            <p>Full-stack Developer at Amazon</p>
+            <a href="#">Connect</a>
+          </div>
+        </div>
+      </div>
+      <div class="sidebar-people">
+        <h3>People you may know</h3>
+        <div class="sidebar-people-row">
+          <img src="images/user-3.png">
+          <div>
+            <h2>Melissa Ramsey</h2>
+            <p>Web Designer at IBM</p>
+            <a href="#">Connect</a>
           </div>
         </div>
       </div>
     </div>
-    <!-- ------------profile sidebar------------ -->
-    <div class="profile-sidebar"></div>
   </div>
+<div class="profile-footer">
+  <div class="sidebar-useful-links">
+    <a href="#">About</a>
+    <a href="#">Accessibilty</a>
+    <a href="#">Help Center</a>
+    <a href="#">Privacy Policy</a>
+    <a href="#">Advertising</a>
+    <a href="#">Get the App</a>
+    <a href="#">More</a>
 
+    <div class="copyright-msg">
+      <img src="images/logo.png">
+      <p>Linkedup &#169; 2023. All right reserved</p>
+    </div>
+  </div> 
+</div>
 
   <script>
 
